crates/proef-cli/tests/snapshots/corpus__artifact__520-api-breadth--a-custom-message-body-is-sent-from-a-docstring.hurl.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef artifact — A custom message body is sent from a docstring
# source: tests/features/520_api_breadth.feature:6
# replay: hurl --test 520-api-breadth--a-custom-message-body-is-sent-from-a-docstring.hurl --variables-file 520-api-breadth--a-custom-message-body-is-sent-from-a-docstring.vars --secret apiToken=<value>

# tests/features/520_api_breadth.feature:7 — the relative sends a custom message (send the custom body)
POST http://127.0.0.1:8787/api/v1/clients/c-1/messages
Authorization: Bearer {{apiToken}}
[Options]
delay: 25ms

{"body": "Fijne verjaardag!", "priority": "high"}

HTTP *
[Asserts]
status == 201
