crates/proef-cli/tests/snapshots/corpus__artifact__520-api-breadth--a-custom-note-body-is-sent-from-a-docstring.hurl.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
# proef artifact — A custom note body is sent from a docstring
# source: tests/features/520_api_breadth.feature:5
# replay: hurl --test 520-api-breadth--a-custom-note-body-is-sent-from-a-docstring.hurl --variables-file 520-api-breadth--a-custom-note-body-is-sent-from-a-docstring.vars --secret apiToken=<value>

# tests/features/520_api_breadth.feature:6 — a member posts a custom note (post the custom body)
POST http://127.0.0.1:8787/api/v1/records/r-1/notes
Authorization: Bearer {{apiToken}}
[Options]
delay: 25ms

{"body": "A custom note body", "priority": "high"}

HTTP *
[Asserts]
status == 201
