crates/proef-cli/tests/snapshots/corpus__artifact__520-api-breadth--a-custom-note-body-is-sent-from-a-docstring.map.json.snap
---
source: crates/proef-cli/tests/corpus.rs
expression: "String::from_utf8(content_a).unwrap()"
---
{
  "schema": 1,
  "entries": [
    {
      "hurl_lines": [
        6,
        15
      ],
      "feature": {
        "file": "tests/features/520_api_breadth.feature",
        "line": 6,
        "text": "a member posts a custom note"
      },
      "optional": false,
      "captures": [],
      "batch": 0,
      "step": 0
    },
    {
      "hurl_lines": [
        15,
        15
      ],
      "feature": {
        "file": "tests/features/520_api_breadth.feature",
        "line": 10,
        "text": "the response status is 201"
      },
      "optional": false,
      "captures": [],
      "batch": 0,
      "step": 1
    }
  ]
}
